[test&doc] 즐겨찾기 메뉴 테스트코드 작성 및 문서화